// Copyright Â© 2021 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "google/api/annotations.proto";
import "lorawan-stack/api/gateway_configuration.proto";
import "lorawan-stack/api/gateway_services.proto";


package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/v3/pkg/ttnpb";

service GatewayConfigurationService {
  rpc SemtechUDPGlobalConfig(PullGatewayConfigurationRequest) returns (SemtechUDPConfig) {
    option (google.api.http) = {
      get: "/api/v3/gcs/gateways/{gateway_ids.gateway_id}/semtechudp/global_conf"
    };
  };

  rpc KerlinkLoradConfig(PullGatewayConfigurationRequest) returns (LoradConfig) {
    option (google.api.http) = {
      get: "/api/v3/gcs/gateways/{gateway_ids.gateway_id}/kerlink-cpf/lorad/lorad.json"
    };
  };

  rpc KerlinkLoradFwdConfig(PullGatewayConfigurationRequest) returns (LoraFwdConfig) {
    option (google.api.http) = {
      get: "/api/v3/gcs/gateways/{gateway_ids.gateway_id}/kerlink-cpf/lorafwd/lorafwd.toml"
    };
  };
}




service GatewayConfigurationServiceV2 {
  rpc GetGateway(PullGatewayConfigurationRequest) returns (GatewayInfoResponse) {
    option (google.api.http) = {
      get: "/api/v2/gateways/{gateway_ids.gateway_id}"
    };
  };
  rpc GetFrequencyPlan(PullFrequencyPlanConfigRequest) returns(SX1301Config){
    option (google.api.http) = {
      get: "/api/v2/frequency-plans/{frequency_plan_id}"
    };
  };
}
